# kli

./: .azure-pipelines.yml  .clang-format  CMakeLists.txt  Config.c  Config.h  Dialog.c  Dialog.h  Input.c  Input.h  LICENSE  Layout.c  Layout.h  README.md  Str.c  Str.h  main.c
.ci/: artifacts-steps.yml  msvc.yml
resources/: kli.manifest  kli.rc.in
